--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
-    <link href="./css/tailwind.css" rel="stylesheet">
+<head>
+
+        <title>BloomBlog</title>
+        <%- include('./partials/head.ejs') %>
+
 </head>
-<body>
-    Hello from BlogBloom :)
-    <p class="text-red-600 p-11">Welcome to</p>
+
+<body style="background-color: black;">
+<%- include('./partials/nav.ejs') %>
+    
+
+
+    <%- include('./partials/scripts.ejs') %>
 </body>
+
 </html>
