--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,27 +1,33 @@
-<nav class="navbar navbar-expand-lg text-white bg-black">
+<nav class="navbar navbar-expand-lg text-white bg-black navbar-dark">
     <div class="container-fluid justify-content-between">
-        <a class="navbar-brand fs-2" style="margin-left: 1.5rem;" href="#">BloomBlog</a>
+        <a class="navbar-brand fs-2" style="margin-left: 1.5rem;" href="">BloomBlog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav fs-5 gap-2" style="margin-right: 1.5rem;" >
+            <ul class="navbar-nav fs-5 gap-2" style="margin-right: 1.5rem;">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Add Blog</a>
+                <li class="nav-item" style="padding-right: 5rem;">
+                    <a class="nav-link" href="">Add Blog</a>
                 </li>
+                <i class="fa-solid fa-user"></i>
+
+
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Ayush Sarodey
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
+
+
+
             </ul>
         </div>
     </div>
@@ -45,9 +51,11 @@
     }
 
     a {
-        font-family: "Poppins", sans-serif;
-
+        /* font-family: "Poppins", sans-serif; */
+        font-family: 'Roboto', sans-serif;
     }
 
-
+    i {
+        align-content: center;
+    }
 </style>
