--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,9 +10,10 @@
 
 <body style="background-color: black;">
 <%- include('./partials/nav.ejs') %>
-    
+<div style="color: white;">
+    <%= JSON.stringify(user)  %>
 
-
+</div>
     <%- include('./partials/scripts.ejs') %>
 </body>
 
