--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -11,6 +11,7 @@
                 background-color: #fff;
                 color: #000;
                 font-family: 'Roboto', sans-serif;
+                height: 100vh;
             }
             .form-container {
                 max-width: 400px;
@@ -19,6 +20,7 @@
                 background-color: #fff;
                 border-radius: 12px;
                 border: 1px solid #ddd;
+                margin-top: 8rem;
             }
             .form-control {
                 background-color: #fff;
@@ -36,10 +38,11 @@
                 transition: .2s;
             }
 
-            .container{
-                height: 600px;
+            /* .container{
+                margin-top: 4rem;
+                height: 200px;
                 align-content: center;
-            }
+            } */
 
             label { 
                 color: black;
@@ -56,6 +59,26 @@
 <body style="background-color: black;">
 <%- include('./partials/nav.ejs') %>
     
+
+<% if (locals.error) { %>
+    <div class="mx-5 my-2">
+    <div id="alert" class="alert alert-danger" role="alert" style="transition: opacity 1s;">
+        <%= locals.error %>!
+    </div>
+</div>
+    <script>
+        setTimeout(function() {
+            var alertElement = document.getElementById('alert');
+            if (alertElement) {
+                alertElement.style.opacity = '0';
+                setTimeout(function() {
+                    alertElement.style.display = 'none';
+                }, 1000); 
+            }
+        }, 3000);
+    </script>
+<% } %>
+
 <div class="container">
     <div class="form-container">
         <h2 class="text-center" style="color: #000;">Signup</h2>
