--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -38,11 +38,6 @@
                 transition: .2s;
             }
 
-            /* .container{
-                margin-top: 4rem;
-                height: 200px;
-                align-content: center;
-            } */
 
             label { 
                 color: black;
@@ -81,7 +76,7 @@
 
 <div class="container">
     <div class="form-container">
-        <h2 class="text-center" style="color: #000;">Signup</h2>
+        <h2 class="text-center" style="color: #000;">User Login</h2>
         <form action="/user/signin" method="POST">
             <div class="form-group">
                 <label for="email">Email address</label>
@@ -91,7 +86,7 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-custom btn-block">Signin</button>
+            <button type="submit" class="btn btn-custom btn-block">Log In</button>
         </form>
     </div>
 </div>
