--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,14 +8,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav fs-5 gap-2" style="margin-right: 1.5rem;">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
-                <li class="nav-item" style="padding-right: 5rem;">
-                    <a class="nav-link" href="">Add Blog</a>
-                </li>
-                <i class="fa-solid fa-user"></i>
+                <% if (locals.user) { %>
+                    <li class="nav-item" style="padding-right: 5rem;">
+                        <a class="nav-link" href="">Add Blog</a>
+                    </li>
+                 
 
-
+                    
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
@@ -25,6 +26,15 @@
                         <li><a class="dropdown-item" href="">Logout</a></li>
                     </ul>
                 </li>
+                <% } else {%>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/signup">Create Account</a>
+                        
+                    </li>
+                    <i class="fa-solid fa-user-plus"></i>
+                <% } %>
+                
 
 
 
@@ -53,8 +63,13 @@
     }
 
     a {
-        /* font-family: "Poppins", sans-serif; */
-        font-family: 'Roboto', sans-serif;
+        font-family: "Poppins", sans-serif;
+        
+        /* font-family: 'Roboto', sans-serif; */
+    }
+
+    li {
+        font-weight: 300;
     }
 
     i {
