--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,15 +3,22 @@
 
 <head>
 
-        <title>Signup</title>
-        <%- include('./partials/head.ejs') %>
+    <title>Signup</title>
+    <%- include('./partials/head.ejs') %>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <style>
             body {
                 background-color: #fff;
-                color: #000;
+                color: hsl(0, 0%, 0%);
                 font-family: 'Roboto', sans-serif;
             }
+
+            p {
+                color: black;
+                text-align: center;
+
+            }
+
             .form-container {
                 max-width: 400px;
                 margin: 50px auto;
@@ -20,69 +27,84 @@
                 border-radius: 12px;
                 border: 1px solid #ddd;
             }
+
             .form-control {
                 background-color: #fff;
                 color: #000;
                 border: 1px solid #ccc;
             }
+
+            form {
+                height: 320px;
+            }
+
             .btn-custom {
                 background-color: #000;
                 color: #fff;
                 border: none;
+                margin-bottom: 15px;
             }
+
             .btn-custom:hover {
                 background-color: #170f0f;
                 color: white;
                 transition: .2s;
             }
 
-            .container{
+            .container {
                 height: 600px;
                 align-content: center;
             }
 
-            label { 
+            label {
                 color: black;
             }
+
             h2 {
                 margin-top: -5px;
-            margin-bottom: 20px;
-        }
+                margin-bottom: 20px;
+            }
         </style>
 
-        
+
 </head>
 
 <body style="background-color: black;">
-<%- include('./partials/nav.ejs') %>
-    
-<div class="container">
-    <div class="form-container">
-        <h2 class="text-center" style="color: #000;">Signup</h2>
-        <form action="/user/signup" method="POST">
-            <div class="form-group">
-                <label for="fullName">Full Name</label>
-                <input type="text" name="fullName" class="form-control" id="fullName" placeholder="Enter full name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" name="email" class="form-control" id="email" placeholder="Enter email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
-            </div>
-            <button type="submit" class="btn btn-custom btn-block">Sign Up</button>
-        </form>
-    </div>
-</div>
+    <%- include('./partials/nav.ejs') %>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <div class="container">
+            <div class="form-container">
+                <h2 class="text-center" style="color: #000;">Signup</h2>
+                <form action="/user/signup" method="POST">
+                    <div class="form-group">
+                        <label for="fullName">Full Name</label>
+                        <input type="text" name="fullName" class="form-control" id="fullName"
+                            placeholder="Enter full name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" class="form-control" id="password" placeholder="Password"
+                            required>
+                    </div>
+                    <button type="submit" class="btn btn-custom btn-block">Sign Up</button>
+                    <p>
+                        Already have an account? <a href="/user/signin">Log In</a>
+                    </p>
+                </form>
+            </div>
+        </div>
 
-    <%- include('./partials/scripts.ejs') %>
+        <!-- Bootstrap JS and dependencies -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+        <%- include('./partials/scripts.ejs') %>
 </body>
 
 </html>
