--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg text-white bg-black navbar-dark">
     <div class="container-fluid justify-content-between">
-        <a class="navbar-brand fs-2" style="margin-left: 1.5rem;" href="">BloomBlog</a>
+        <a class="navbar-brand fs-2" style="margin-left: 1.5rem;" href="/">BloomBlog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
