--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
                 </li>
                 <% if (locals.user) { %>
                     <li class="nav-item" style="padding-right: 5rem;">
-                        <a class="nav-link" href="">Add Blog</a>
+                        <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
                  
 
