--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -17,8 +17,8 @@
         <input type="file" class="form-control" id="coverImage" name="coverImage" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title" name="title" aria-describedby="emailHelp">
+        <!-- <label for="title" class="form-label">Title</label> -->
+        <input type="text" class="form-control" id="title" name="title" aria-describedby="emailHelp" style="background-color: black; color: white; border: none; font-family: 'poppins',sans-serif; font-size: 2rem; font-weight: 600;"  value="Blog Title here...">
     </div>
     <div class="mb-3">
         <label for="body">Create Your Blog</label>
