--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <%- include('./partials/head') %>
+    <title>Add New Blog</title>
+  </head>
+  <body style="color: white; background-color: #000;">
+    <%- include('./partials/nav') %>
 
-<head>
-
-        <title>Add New Blog</title>
-        <%- include('./partials/head.ejs') %>
-
-</head>
-
-<body style="background-color: black; color: white;">
-<%- include('./partials/nav.ejs') %>
-<div style="color: white;"></div>
-<form action="" class="container mt-3">
-    <div class="mb-3">
-        <label for="coverImage" class="form-label">Cover Image</label>
-        <input type="file" class="form-control" id="coverImage" name="coverImage" aria-describedby="emailHelp">
+    <div class="container mt-3">
+      <form action="/blog" method="post" enctype="multipart/form-data">
+        <div class="mb-3">
+          <label for="coverImage" class="form-label">Cover Image</label>
+          <input
+            type="file"
+            class="form-control"
+            id="coverImage"
+            name="coverImage"
+            aria-describedby="coverImage"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            name="title"
+            aria-describedby="title"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="body">Body</label>
+          <textarea name="body" class="form-control" id="body"></textarea>
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+      </form>
     </div>
-    <div class="mb-3">
-        <!-- <label for="title" class="form-label">Title</label> -->
-        <input type="text" class="form-control" id="title" name="title" aria-describedby="emailHelp" style="background-color: black; color: white; border: none; font-family: 'poppins',sans-serif; font-size: 2rem; font-weight: 600;"  value="Blog Title here...">
-    </div>
-    <div class="mb-3">
-        <label for="body">Create Your Blog</label>
-        <textarea name="body" class="form-control" id="body"></textarea>
-        
-    </div>
-    <div class="mb-3">
-        <button class="btn btn-primary">Submit</button>
-        
-    </div>
-    
-</form>
-    <%- include('./partials/scripts.ejs') %>
-</body>
 
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
