--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,20 +1,19 @@
-<nav class="navbar navbar-expand-lg text-white bg-black navbar-dark">
+<nav class="navbar navbar-expand-lg text-white bg-black navbar-dark" style="height: 60px;">
     <div class="container-fluid justify-content-between">
-        <a class="navbar-brand fs-2" style="margin-left: 1.5rem;" href="/">BloomBlog</a>
+        <a class="navbar-brand fs-3" style="margin-left: 1.5rem;" href="/">BloomBlog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav fs-5 gap-2" style="margin-right: 1.5rem;">
+            <ul class="navbar-nav gap-2" style="margin-right: 1.5rem; font-size: 18px;">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <% if (locals.user) { %>
-                    <li class="nav-item" style="padding-right: 5rem;">
+                    <li class="nav-item" style="padding-right: .5rem;">
                         <a class="nav-link" href="/blog/add-new">Add Blog</a>
                     </li>
-                 
 
                     
                 <li class="nav-item dropdown">
