--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -3,25 +3,68 @@
 
 <head>
 
-        <title>Blog</title>
-        <%- include('./partials/head.ejs') %>
+    <title>Blog</title>
+    <%- include('./partials/head.ejs') %>
 
 </head>
 
 <body style="background-color: black;">
-<%- include('./partials/nav.ejs') %>
-<div class="container" mt-4>
-    <h1 class="mt-3 mb-3"><%= blog.title %></h1>
-    <img src="<%= blog.coverImageURL %>" alt="" width="500px">
-    <pre class="mt-5 fs-5" style="text-wrap: wrap;"><%= blog.body %></pre>
-</div>
+    <%- include('./partials/nav.ejs') %>
+        <div class="container" mt-4>
+            <h1 class="mt-3 mb-3">
+                <%= blog.title %>
+            </h1>
+            <img src="<%= blog.coverImageURL %>" alt="" width="500px">
+            <pre class="mt-5 fs-5" style="text-wrap: wrap;"><%= blog.body %></pre>
+        </div>
 
-<div class="container" mt-4>
-    <img src="<%= blog.createdBy.profileImageURL %>" alt="user img" width="50px">
-    <h3 style="display: inline-block;" class="align-items-center"><%= blog.createdBy.fullName %></h3>
-    
-</div>
-<%- include('./partials/scripts.ejs') %>
+        <!--    comment user display -->
+        <div class="container mb-4">
+            <div class="d-flex align-items-center gap-2">
+                <img src="<%= blog.createdBy.profileImageURL %>" alt="user img" class="profile-img" width="45px">
+                <h3 class="mb-0 ml-3">
+                    <%= blog.createdBy.fullName %>
+                </h3>
+            </div>
+        </div>
+
+        <div class="container mt-2">
+            <h2>Comments</h2>
+            <% if (locals.user) { %>
+                <form action="/blog/comment/<%= blog._id %>" method="post">
+                    <div class="mb-3 mt-2 d-flex ">
+                        <input type="text" name="content" class="form-control" placeholder="Enter your comment"
+                            style="width: 80%; margin-right: 10px;" />
+                        <button class="btn btn-sm btn-primary px-4" type="submit">Add</button>
+
+                    </div>
+                </form>
+
+                <% } %>
+                    <div class="mt-3">
+                        <% comments.reverse().forEach(comment=> { %>
+                            <div class="mt-2">
+                                <div class="d-flex align-items-center">
+                                    <img src="<%= blog.createdBy.profileImageURL%>" alt="user img"
+                                        class="profile-img m-1" width="30px">
+                                    <h5 class="mb-0 ml-3">
+                                        <%= comment.createdBy.fullName %>
+                                    </h5>
+                                </div>
+                                <p style="padding-left: 2.5rem;">
+                                    <%= comment.content %>
+                                </p>
+                            </div>
+                            <% }) %>
+                    </div>
+        </div>
+
+        <%- include('./partials/scripts.ejs') %>
+            <!-- <style>
+            input::placeholder{
+                color: white;
+            }
+        </style> -->
 </body>
 
 </html>
